test: 깨진 테스트 복구